image thumbnails are now clickable

--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ img.product-image {
   position: relative;
   vertical-align: top;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .product-thumbnail-container.active img {
