--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ a:visited {
 .cart-preview {
   position: absolute;
   z-index: 9999;
-  width: 300px;
+  width: 400px;
   height: 200px;
   top: 56px;
   right: 0;
@@ -199,10 +199,20 @@ a:visited {
 .cart-info {
   color: var(--darkGrayishBlue);
   flex: 1;
+  /* font-weight: bold; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+
+.cart-total {
   font-weight: bold;
+}
+
+.cart-breakdown {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .hide {
@@ -404,7 +414,40 @@ button.mobile-nav-button {
   top: 50%;
 }
 
-.right-arrow::after {
+.toast-message {
+  position: fixed;
+  top: 20px;
+  right: -100%;
+  z-index: 999;
+  background-color: var(--white);
+  border-radius: 10px;
+  font-weight: bold;
+  transition: 0.5s ease all;
+  border: 1px solid var(--darkGrayishBlue);
+  padding: 10px;
+}
+
+.toast-message.show {
+  right: 20px;
+}
+
+.shoe-cart-preview {
+  display: flex;
+  gap: 10px;
+  padding: 10px 20px;
+  /* flex-direction: column; */
+}
+
+.checkout-delete {
+  margin-left: auto;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  background: none;
+}
+
+.checkout-delete img {
+  width: 20px;
 }
 
 @media screen and (max-width: 600px) {
