Implemented basic cart code with javascript

--- a/style.css
+++ b/style.css
@@ -205,6 +205,12 @@ a:visited {
   /* align-items: center; */
 }
 
+.cart-info.empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .cart-total {
   font-weight: bold;
 }
