--- a/style.css
+++ b/style.css
@@ -143,6 +143,27 @@ nav ul a:hover {
   cursor: pointer;
 }
 
+#cart {
+  cursor: pointer;
+}
+
+.cart-nav {
+  position: relative;
+}
+
+.cart-quantity {
+  position: absolute;
+  background: var(--orange);
+  border-radius: 10px;
+  color: var(--white);
+  top: -5px;
+  right: -10px;
+  font-size: 12px;
+  width: 20px;
+  text-align: center;
+  z-index: 10;
+}
+
 .cart-img {
   filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(280deg)
     brightness(107%) contrast(101%);
@@ -431,6 +452,15 @@ button.mobile-nav-button {
   transition: 0.5s ease all;
   border: 1px solid var(--darkGrayishBlue);
   padding: 10px;
+}
+
+button.hide-toast {
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  font-size: 28px;
+  background-color: transparent;
+  color: var(--black);
 }
 
 .toast-message.show {
